# filerskeepers_assignment

./: .env.example  README.md  create_api_key.py  docker-compose.yml  docs.json  file_keeper_assessment.txt  pyproject.toml  run_crawler.py
app/: __init__.py  main.py
app/api/: auth.py  rate_limit.py
app/api/routes/: auth.py  books.py  changes.py
app/crawler/: __init__.py  models.py  scraper.py  storage.py
app/database/: models.py  mongodb.py  schemas.py
app/scheduler/: change_detector.py  reports.py  scheduler.py
app/utils/: config.py  logger.py
reports/: changes_report_2025-11-04.json
tests/: test_api.py  test_crawler.py  test_scheduler.py
