[project]
name = "assessment"
version = "0.1.0"
description = "Web crawling solution for books.toscrape.com with MongoDB storage, change detection, and RESTful API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.121.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "motor>=3.3.0",
    "beanie>=1.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.27.0",
]
